created GET POST and PUT APIs for services
